[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "google-search-results>=2.4.2",
    "langchain-anthropic>=1.3.0",
    "langgraph>=1.0.5",
    "ntropy-sdk>=5.2.1",
    "nylas>=6.14.0",
    "openpyxl>=3.1.5",
    "ortools>=9.14.6206",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "python-dateutil>=2.9.0.post0",
    "uvicorn>=0.38.0",
]
