[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "ntropy-sdk>=5.2.1",
    "ortools>=9.14.6206",
    "pydantic>=2.12.3",
    "python-dateutil>=2.9.0.post0",
    "uvicorn>=0.38.0",
]
