[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.1",
    "langchain-anthropic>=1.3.0",
    "langgraph>=1.0.5",
    "mindee>=4.32.1",
    "ntropy-sdk>=5.2.1",
    "nylas>=6.14.0",
    "ortools>=9.14.6206",
    "pydantic>=2.12.3",
    "python-dateutil>=2.9.0.post0",
    "uvicorn>=0.38.0",
]
